k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pinapp-node-test-service
spec:
  type: LoadBalancer  
  ports:
  - port: 80          
    targetPort: 3000  
  selector:
    app: pinapp-node-test
